lr on gnn data too

--- a/Code/Modelling/Graph Neural Network/Other Classifiers on GNN Data.ipynb
+++ b/Code/Modelling/Graph Neural Network/Other Classifiers on GNN Data.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XGBoost on GNN Data"
+    "# Other Classifiers on GNN Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Packages\n",
     "import pandas as pd\n",
     "import xgboost as xgb\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +419,7 @@
        "[1964 rows x 205 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +456,7 @@
        " 'D': 8}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -616,8 +617,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hyperparameters: \n",
+      "{'C': 0.1, 'class_weight': 'balanced', 'l1_ratio': 1.0, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Accuracy:  0.6244\n",
+      "Majority class share baseline:  0.29850746268656714\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load hyperparameters\n",
+    "hyperparameters = joblib.load('../../../Output/Modelling/Logistic Regression/exclude_previous_rating_model_3/exclude_previous_rating_model_3_best_params.pkl')\n",
+    "print('Hyperparameters: ')\n",
+    "print(hyperparameters)\n",
+    "\n",
+    "# Define logistic regression model\n",
+    "model = LogisticRegression()\n",
+    "\n",
+    "# Fit model\n",
+    "model.set_params(**hyperparameters)\n",
+    "model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Model prediction\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "# Accuracy and majority class share baseline\n",
+    "accuracy = round(accuracy_score(y_test, y_pred), 4)\n",
+    "print('Accuracy: ', accuracy)\n",
+    "stattotex(accuracy, 'retrainLRAccuracy', '../../../Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex')\n",
+    "majority_class_share_baseline = y_test.value_counts(normalize=True).max()\n",
+    "print('Majority class share baseline: ', majority_class_share_baseline)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +701,7 @@
     "# Accuracy and majority class share baseline\n",
     "accuracy = round(accuracy_score(y_test, y_pred), 4)\n",
     "print('Accuracy: ', accuracy)\n",
-    "stattotex(accuracy, 'retrainAccuracy', '../../../Output/Modelling/Graph Neural Network/xgboost_on_gnn_data.tex')\n",
+    "stattotex(accuracy, 'retrainXGBAccuracy', '../../../Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex')\n",
     "majority_class_share_baseline = y_test.value_counts(normalize=True).max()\n",
     "print('Majority class share baseline: ', majority_class_share_baseline)"
    ]
@@ -660,7 +715,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    ticker fixed_quarter_date Rating  \\\n",
+      "0     AAPL         2016-07-01     AA   \n",
+      "1     ABBV         2015-04-01      A   \n",
+      "2     ABBV         2016-04-01      A   \n",
+      "3      ABC         2013-04-01      A   \n",
+      "4      ABC         2013-07-01      A   \n",
+      "..     ...                ...    ...   \n",
+      "397    XEL         2016-07-01      A   \n",
+      "398    XEL         2016-10-01      A   \n",
+      "399    XOM         2016-01-01    AAA   \n",
+      "400    YUM         2015-04-01    BBB   \n",
+      "401   ZBRA         2016-10-01      B   \n",
+      "\n",
+      "    exclude_previous_rating_model_3_predictions  \n",
+      "0                                            AA  \n",
+      "1                                            AA  \n",
+      "2                                           AAA  \n",
+      "3                                             A  \n",
+      "4                                             A  \n",
+      "..                                          ...  \n",
+      "397                                         BBB  \n",
+      "398                                           A  \n",
+      "399                                         AAA  \n",
+      "400                                          AA  \n",
+      "401                                           B  \n",
+      "\n",
+      "[402 rows x 4 columns]\n",
+      "Accuracy:  0.6692\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load predictions and target file\n",
+    "pred_and_targets = pd.read_excel('../../../Data/Predictions/Logistic Regression/exclude_previous_rating_model_3/exclude_previous_rating_model_3_predictions.xlsx')\n",
+    "\n",
+    "# Inner join with test_df on ticker and fixed_quarter_date\n",
+    "# Cast to string\n",
+    "pred_and_targets['fixed_quarter_date'] = pred_and_targets['fixed_quarter_date'].astype(str)\n",
+    "test_df['fixed_quarter_date'] = test_df['fixed_quarter_date'].astype(str)\n",
+    "pred_and_targets = pd.merge(pred_and_targets, test_df[['ticker', 'fixed_quarter_date']], on=['ticker', 'fixed_quarter_date'], how='inner')\n",
+    "print(pred_and_targets)\n",
+    "\n",
+    "# Accuracy\n",
+    "accuracy = round(accuracy_score(pred_and_targets['Rating'], pred_and_targets['exclude_previous_rating_model_3_predictions']), 4)\n",
+    "print('Accuracy: ', accuracy)\n",
+    "stattotex(accuracy, 'pretrainedLRAccuracy', '../../../Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +831,7 @@
     "# Accuracy\n",
     "accuracy = round(accuracy_score(pred_and_targets['Rating'], pred_and_targets['exclude_previous_rating_model_3_predictions']), 4)\n",
     "print('Accuracy: ', accuracy)\n",
-    "stattotex(accuracy, 'pretrainedAccuracy', '../../../Output/Modelling/Graph Neural Network/xgboost_on_gnn_data.tex')"
+    "stattotex(accuracy, 'pretrainedXGBAccuracy', '../../../Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex')"
    ]
   }
  ],
