add other mcnemar's test stats

--- a/Code/Modelling/Graph Neural Network/Other Classifiers on GNN Data.ipynb
+++ b/Code/Modelling/Graph Neural Network/Other Classifiers on GNN Data.ipynb
@@ -655,6 +655,11 @@
     "# Model prediction\n",
     "y_pred = model.predict(X_test_scaled)\n",
     "\n",
+    "# Output predictions\n",
+    "output_df = test_df[['ticker', 'fixed_quarter_date', target_column]].copy()\n",
+    "output_df['prediction'] = pd.Series(y_pred).map({value: key for key, value in custom_mapping.items()})\n",
+    "output_df.to_excel('../../../Data/Predictions/Graph Neural Network/Other Classifiers on GNN Data/lr_retrain_predictions.xlsx', index=False)\n",
+    "\n",
     "# Accuracy and majority class share baseline\n",
     "accuracy = round(accuracy_score(y_test, y_pred), 4)\n",
     "print('Accuracy: ', accuracy)\n",
@@ -697,6 +702,11 @@
     "\n",
     "# Model prediction\n",
     "y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "# Output predictions\n",
+    "output_df = test_df[['ticker', 'fixed_quarter_date', target_column]].copy()\n",
+    "output_df['prediction'] = pd.Series(y_pred).map({value: key for key, value in custom_mapping.items()})\n",
+    "output_df.to_excel('../../../Data/Predictions/Graph Neural Network/Other Classifiers on GNN Data/xgb_retrain_predictions.xlsx', index=False)\n",
     "\n",
     "# Accuracy and majority class share baseline\n",
     "accuracy = round(accuracy_score(y_test, y_pred), 4)\n",
@@ -764,6 +774,9 @@
     "pred_and_targets = pd.merge(pred_and_targets, test_df[['ticker', 'fixed_quarter_date']], on=['ticker', 'fixed_quarter_date'], how='inner')\n",
     "print(pred_and_targets)\n",
     "\n",
+    "# Save to '../../../Data/Predictions/Graph Neural Network/Other Classifiers on GNN Data/lr_pretrained_predictions.xlsx'\n",
+    "pred_and_targets.to_excel('../../../Data/Predictions/Graph Neural Network/Other Classifiers on GNN Data/lr_pretrained_predictions.xlsx', index=False)\n",
+    "\n",
     "# Accuracy\n",
     "accuracy = round(accuracy_score(pred_and_targets['Rating'], pred_and_targets['exclude_previous_rating_model_3_predictions']), 4)\n",
     "print('Accuracy: ', accuracy)\n",
@@ -827,6 +840,9 @@
     "test_df['fixed_quarter_date'] = test_df['fixed_quarter_date'].astype(str)\n",
     "pred_and_targets = pd.merge(pred_and_targets, test_df[['ticker', 'fixed_quarter_date']], on=['ticker', 'fixed_quarter_date'], how='inner')\n",
     "print(pred_and_targets)\n",
+    "\n",
+    "# Save to '../../../Data/Predictions/Graph Neural Network/Other Classifiers on GNN Data/xgb_pretrained_predictions.xlsx'\n",
+    "pred_and_targets.to_excel('../../../Data/Predictions/Graph Neural Network/Other Classifiers on GNN Data/xgb_pretrained_predictions.xlsx', index=False)\n",
     "\n",
     "# Accuracy\n",
     "accuracy = round(accuracy_score(pred_and_targets['Rating'], pred_and_targets['exclude_previous_rating_model_3_predictions']), 4)\n",
