--- a/Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex
+++ b/Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex
@@ -2,3 +2,7 @@
 \newcommand{\retrainXGBAccuracy}{0.8209}
 \newcommand{\pretrainedLRAccuracy}{0.6692}
 \newcommand{\pretrainedXGBAccuracy}{0.893}
+\renewcommand{\retrainLRAccuracy}{0.6244}
+\renewcommand{\retrainXGBAccuracy}{0.8209}
+\renewcommand{\pretrainedLRAccuracy}{0.6692}
+\renewcommand{\pretrainedXGBAccuracy}{0.893}
